# CorteX

./: .gitignore  README.md  openapi.yaml  package.json
backend/: README.md  findings.json  pyproject.toml  requirements.txt
backend/auditpipe/: __init__.py  api_adapt.py  config.py  detectors.py  gate.py  ingest.py  ledger.py  llm.py  pipeline.py  provenance.py  run.py  server.py
backend/auditpipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/output/: findings.json
backend/prompts/: document_analysis.txt  dossier_synthesis.txt
backend/tests/: test_server_integration.py
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  alignment.css  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: DetailDrawer.tsx  Documents.tsx  EvidenceViewer.tsx  FilePreview.tsx  FileTree.tsx  FindingDetail.tsx  FindingList.tsx  InvestigationGraph.tsx  InvestigationJourney.tsx  Overview.tsx  Shell.tsx
frontend/src/lib/: api.ts  fixtures.ts  folderCache.ts  folderUpload.test.ts  folderUpload.ts  format.test.ts  format.ts  mockApi.ts
